--- a/CSB/CSB/Master/TrangChu.Master
+++ b/CSB/CSB/Master/TrangChu.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="home.master.cs" Inherits="CSB.home" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="TrangChu.master.cs" Inherits="CSB.Master.TrangChu" %>
 
 <!DOCTYPE html>
 
@@ -6,13 +6,13 @@
 <head runat="server">
     <title></title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <link href="Content/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/master.css" rel="stylesheet" />
-    <script src="Scripts/jquery-3.4.1.slim.min.js"></script>
+    <link href="../Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="../css/master.css" rel="stylesheet" />
+    <script src="../Scripts/jquery-3.4.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-     <div id="wraper">
+    <div id="wraper">
         <div id="header">
             <div id="banner">
                 <img src="../Image/header.jpg" alt="Italian Trulli"/>
