--- a/CSB/CSB/Master/TrangChu.Master
+++ b/CSB/CSB/Master/TrangChu.Master
@@ -5,151 +5,14 @@
 <head runat="server">
     <title></title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <%--    <link href="../Content/bootstrap.min.css" rel="stylesheet" />--%>
-    <%--  <link href="../css/master.css" rel="stylesheet" />--%>
+    <link href="../css/master.css" rel="stylesheet" />
     <script src="../Scripts/jquery-3.4.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-    <style>
-        * {
-            font: normal 14px;
-            font-family: Arial Tahoma 'Times New Roman';
-            color: black;
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-        }
-
-        #wraper {
-            padding-left: 5px;
-            padding-right: 5px;
-            width: 100%;
-            height: 100%;
-            margin: auto auto;
-        }
-
-        #header #banner {
-            height: 150px;
-            overflow: hidden;
-        }
-
-        #masterContent {
-            min-height: 890px;
-            overflow: hidden;
-        }
-
-        .mainMenu {
-            margin: 0;
-            padding: 0;
-            height: 100px;
-            line-height: 100px;
-            background: linear-gradient(to top,#c2bcb5,#ffffff);
-        }
-
-            .mainMenu ul {
-                list-style: none;
-            }
-
-                .mainMenu ul li {
-                    display: inline-block;
-                    height: 100px;
-                    line-height: 100px;
-                }
-
-                    .mainMenu ul li a {
-                        display: block;
-                        text-decoration: none;
-                        text-align: center;
-                        color: #1200a3;
-                        font-weight: bold;
-                        padding: 0 22px;
-                    }
-
-                        .mainMenu ul li a:hover {
-                            background-color: beige;
-                        }
-
-        .leftContent {
-            float: left;
-            width: 18%;
-            color: black;
-            min-height: 890px;
-            border-radius: 5px;
-        }
-
-        .rightContent {
-            float: right;
-            width: 82%;
-            color: black;
-            min-height: 890px;
-            border-radius: 5px;
-        }
-
-        #footer {
-            height: 150px;
-            line-height: 60px;
-            width: 100%;
-            background: linear-gradient(to top,#c2bcb5,#ffffff);
-            text-shadow: 0.1em 0.1em #333;
-            color: #fff;
-            text-align: center;
-            border-radius: 5px;
-            margin-top: 10px;
-        }
-
-        #phuhieu {
-            height: 220px;
-            text-align: center;
-        }
-
-            #phuhieu img {
-                width: 100%;
-                padding: 0 50px;
-                height: 100%
-            }
-
-        #banner img {
-            width: 100%;
-            height: 100%
-        }
-
-        #card #card-body {
-            padding: 0px 0px;
-        }
-
-        .btn-group-vertical {
-            width: 100%;
-        }
-
-        .card .card-header a {
-            color: #1200a3;
-            font-weight: bold;
-        }
-
-        .card_body .btn-group-vertical .btn-primary {
-            font-size: 15px;
-            text-align: left;
-            border-radius: unset;
-            border: unset;
-        }
-
-        .btn-primary {
-            background-color: #1081ba;
-        }
-
-        #accordion {
-            font-size: 20px;
-        }
-
-        .rightContent .navbar {
-            justify-content: flex-end;
-            background-color: #ffffff !important;
-        }
-    </style>
     <div id="wraper">
         <div id="header">
             <div id="banner">
@@ -243,13 +106,13 @@
                         <div id="collapseFight" class="collapse" data-parent="#accordion">
                             <div class="card_body">
                                 <div class="btn-group-vertical">
-                                    <button type="button" class="btn btn-primary">CÔNG VĂN, TÀI LIỆU CẤP TRÊN</button>
-                                    <button type="button" class="btn btn-primary">CÔNG VĂN, TÀI LIỆU CÁC ĐƠN VỊ</button>
-                                    <button type="button" class="btn btn-primary">KIỂM TRA, CHỈ ĐẠO, HƯỚNG DẪN ĐƠN VỊ</button>
-                                    <button type="button" class="btn btn-primary">NGHIÊN CỨU KHOA HỌC, SÁNG KIẾN, CẢI TIẾN</button>
-                                    <button type="button" class="btn btn-primary">HUẤN LUYỆN, HỘI THI, HỘI THAO</button>
-                                    <button type="button" class="btn btn-primary">THEO DÕI THỰC HIỆN NHIỆM VỤ PHÒNG</button>
-                                    <button type="button" class="btn btn-primary">THỰC HIỆN CHẾ ĐỘ BÁO CÁO</button>
+                                    <button type="button" class="btn btn-primary">NGÂN SÁCH - HẠNG MỤC MUA SẮM</button>
+                                    <button type="button" class="btn btn-primary">QUẢN LÝ GIÓI THẦU</button>
+                                    <button type="button" class="btn btn-primary">NHẬP XUẤT TỒN KHO BTL CSB</button>
+                                    <button type="button" class="btn btn-primary">PHÂN CẤP ĐẢM BẢO VẬT TƯ NGÀNH TÀU</button>
+                                    <button type="button" class="btn btn-primary">THỐNG KÊ MẬT ĐỘ HƯ HỎNG CỤM CHI TIẾT, HỆ THỐNG - NHU CẦU VẬT TƯ</button>
+                                    <button type="button" class="btn btn-primary">QUẢN LÝ KHẢ NĂNG TẠO NGUỒN VẬT TƯ</button>
+                                    <button type="button" class="btn btn-primary">HIỆU QUẢ SỬ DỤNG VẬT TƯ</button>
                                 </div>
                             </div>
                         </div>
@@ -261,27 +124,30 @@
             <div class="rightContent">
                 <div class="mainMenu">
                     <ul>
-                        <li><a href="#">TRANG CHỦ</a></li>
-                        <li><a href="#">CẬP NHẬP THÔNG TIN DỮ LIỆU</a></li>
-                        <li><a href="#">TRUY XUẤT DỮ LIỆU</a></li>
-                        <li><a href="#">GIỚI THIỆU VỀ PHÒNG QLKT TÀU</a></li>
-                        <li><a href="#">BIỂU ĐỒ THỐNG KÊ, PHÂN TÍCH DỮ LIỆU</a></li>
-                        <li><a href="#">ĐỀ XUẤT MỚI</a></li>
-                        <li>
-                            <div class="dropdown">
-                                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                                    Dương Văn Tuyên
+                        <li><a class="a_menu" href="#">VÙNG 1</a></li>
+                        <li><a class="a_menu" href="#">VÙNG 2</a></li>
+                        <li><a class="a_menu" href="#">VÙNG 3</a></li>
+                        <li><a class="a_menu" href="#">VÙNG 4</a></li>
+                        <li><a class="a_menu" href="#">CÁC ĐƠN VỊ TRỰC THUỘC</a></li>
+                        <li id="li_infor_login">
+                            <div class="dropdown" >
+                                
+                                <button type="button" id="btn_Infor_Login" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                                     <i class="bi bi-person-circle icon_account"> Dương Văn Tuyên</i>
                                 </button>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="#">Link 1</a>
-                                    <a class="dropdown-item" href="#">Link 2</a>
+                               
+                                <div class="dropdown-menu" id="menu_infor_login">
+                                    <a class="dropdown-item" href="#"><i class="bi bi-info-circle icon_menu_account"> Thông tin tài khoản</i></a>
+                                    <a class="dropdown-item" href="#"><i class="bi bi-unlock-fill icon_menu_account"> Đổi mật khẩu</i> </a>
+                                    <a class="dropdown-item" href="#"><i class="bi bi-box-arrow-in-left icon_menu_account"> Đăng xuất</i> </a>
                                 </div>
                             </div>
                         </li>
                     </ul>
                 </div>
                 <div class="mainContent">
-                    <asp:ContentPlaceHolder ID="MainContent" runat="server"></asp:ContentPlaceHolder>
+                
+                    <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server"></asp:ContentPlaceHolder>
                 </div>
 
             </div>
