--- a/CSB/CSB/css/master.css
+++ b/CSB/CSB/css/master.css
@@ -10,8 +10,7 @@ body {
 }
 
 #wraper {
-    width: 100%;
-    height: 100%;
+    padding: 0px 5px;
     margin: auto auto;
 }
 
@@ -43,15 +42,16 @@ body {
     }
 
         .mainMenu ul li {
+            font-size: 15px;
             display: inline-block;
-            line-height: 65px;
+            line-height: 55px;
         }
 
     .mainMenu .a_menu {
         display: block;
         text-decoration: none;
         text-align: center;
-        color: #1200a3;
+        color: #01b5f9;
         font-weight: bold;
         padding: 0 22px;
     }
@@ -62,17 +62,15 @@ body {
 
 .leftContent {
     float: left;
-    width: 20%;
+    width: 16%;
     color: black;
-    min-height: 890px;
     border-radius: 5px;
 }
 
 .rightContent {
     float: right;
-    width: 80%;
+    width: 84%;
     color: black;
-    min-height: 890px;
     border-radius: 5px;
 }
 
@@ -111,12 +109,12 @@ body {
 }
 
 .card .card-header a {
-    color: #1200a3;
+    color: #01b5f9;
     font-weight: bold;
 }
 
 .card_body .btn-group-vertical .btn-primary {
-    font-size: 14px;
+    font-size: 13px;
     text-align: left;
     border-radius: unset;
     border: unset;
@@ -127,7 +125,7 @@ body {
 }
 
 #accordion {
-    font-size: 16px;
+    font-size: 15px;
 }
 
 .rightContent .navbar {
@@ -140,7 +138,7 @@ body {
     border: unset;
     border-color: unset;
     width: 100%;
-    color: #1200a3;
+    color: #01b5f9;
     vertical-align: unset;
 }
 
@@ -154,17 +152,18 @@ body {
 }
 
     #menu_infor_login a {
-        line-height: 50px;
+        padding: 0.25rem 1rem;
+        line-height: 35px;
     }
 
 .icon_account {
     font-size: 20px;
-    color: #1200a3;
+    color: #01b5f9;
     font-style: inherit;
 }
 
 .icon_menu_account {
     font-size: 20px;
-    color: #1200a3;
+    color: #01b5f9;
     font-style: inherit;
 }
