--- a/CSB/CSB/css/Manager_user.css
+++ b/CSB/CSB/css/Manager_user.css
@@ -105,3 +105,125 @@ div.dataTables_wrapper div.dataTables_processing {
     padding: 5px;
     font-size: 20px;
 }
+
+/* 4.2 Section */
+.section {
+    position: relative;
+    z-index: 1;
+}
+
+    .section > *:first-child {
+        margin-top: -7px;
+    }
+
+    .section .section-header {
+        box-shadow: 2px 4px 8px 2px rgba(0, 0, 0, 0.05);
+        background-color: #fff;
+        border-radius: 3px;
+        border: none;
+        position: relative;
+        margin-bottom: 30px;
+        padding: 20px;
+        display: flex;
+        align-items: center;
+    }
+
+        .section .section-header h1 {
+            margin-bottom: 0;
+            font-weight: 700;
+            display: inline-block;
+            font-size: 24px;
+            margin-top: 3px;
+            color: #34395e;
+        }
+
+        .section .section-header .section-header-back {
+            margin-right: 15px;
+        }
+
+            .section .section-header .section-header-back .btn:hover {
+                background-color: #6777ef;
+                color: #fff;
+            }
+
+        .section .section-header .section-header-button {
+            margin-left: 20px;
+        }
+
+        .section .section-header .section-header-breadcrumb {
+            margin-left: auto;
+            display: flex;
+            align-items: center;
+        }
+
+            .section .section-header .section-header-breadcrumb .breadcrumb-item {
+                font-size: 14px;
+            }
+
+        .section .section-header .btn {
+            font-size: 12px;
+        }
+
+    .section .section-title {
+        font-size: 18px;
+        color: #191d21;
+        font-weight: 600;
+        position: relative;
+        margin: 30px 0 25px 0;
+    }
+
+        .section .section-title:before {
+            content: ' ';
+            border-radius: 5px;
+            height: 8px;
+            width: 30px;
+            background-color: #6777ef;
+            display: inline-block;
+            float: left;
+            margin-top: 6px;
+            margin-right: 15px;
+        }
+
+        .section .section-title + .section-lead {
+            margin-top: -20px;
+        }
+
+    .section .section-lead {
+        margin-left: 45px;
+    }
+
+.main-wrapper-1 .section .section-header {
+    margin-left: -30px;
+    margin-right: -30px;
+    margin-top: -10px;
+    border-radius: 0;
+    border-top: 1px solid #dbd1d1;
+    padding-left: 35px;
+    padding-right: 35px;
+}
+
+@media (max-width: 575.98px) {
+    .section .section-title {
+        font-size: 14px;
+    }
+
+    .section .section-header {
+        flex-wrap: wrap;
+        margin-bottom: 20px !important;
+    }
+
+        .section .section-header h1 {
+            font-size: 18px;
+        }
+
+        .section .section-header .float-right {
+            display: inline-block;
+            width: 100%;
+            margin-top: 15px;
+        }
+
+        .section .section-header .section-header-breadcrumb {
+            flex-basis: 100%;
+            margin-top: 10px;
+        }
+}
