--- a/CSB/CSB/Master/TrangChu.Master
+++ b/CSB/CSB/Master/TrangChu.Master
@@ -181,9 +181,9 @@
 
             $.ajax({
                 type: "GET",
-                url: "https://csb_api.com/api/list_users",
+                url: "http://localhost:8081/api/list_users",
                 dataType: "json",
-                beforeSend: function () { // Before we send the request, remove the .hidden class from the spinner and default to inline-block.
+                beforeSend: function() { // Before we send the request, remove the .hidden class from the spinner and default to inline-block.
                     $('#loader').removeClass('hidden');
                 },
                 success: function (data) {
