--- a/CSB/CSB/Master/TrangChu.Master
+++ b/CSB/CSB/Master/TrangChu.Master
@@ -15,7 +15,7 @@
     <link href="../css/manage_user.css" rel="stylesheet" />
     <style>
         .toastSuccess {
-            background-color: rgb(17 165 42);
+            background-color: rgb(17,165,42);
             box-shadow: 0 2px 6px #2e933a;
             color: white;
             padding: 6px 10px;
@@ -28,7 +28,7 @@
             z-index:100;
         }
         .toastSuccess-header {
-            background-color: rgb(17 165 42);
+            background-color: rgb(17,165,42);
         }
         .close {
             color: #fff;
@@ -41,12 +41,12 @@
             margin-top: 5px;
         }
         .toastSuccess-body {
-            background-color: rgb(17 165 42);
+            background-color: rgb(17,165,42);
             color: white;
             font-size: 14px;
         }
         .toastError {
-            background-color: rgb(183 22 22);
+            background-color: rgb(183,22,22);
             box-shadow: 0 2px 6px #c95e5e;
             color: white;
             padding: 6px 10px;
@@ -59,7 +59,7 @@
             z-index:100;
         }
         .toastError-header {
-            background-color: rgb(183 22 22);
+            background-color: rgb(183,22,22);
         }
         .toastError-header-text { 
             color: white;
@@ -68,9 +68,16 @@
             margin-top: 5px;
         }
         .toastError-body {
-            background-color: rgb(183 22 22);
+            background-color: rgb(183,22,22);
             color: white;
             font-size: 14px;
+        }
+
+        .btn_XoaUser{
+            margin-left: 5px;
+        }
+        .btn_SuaUser{
+          margin-left: 10px;
         }
     </style>
 </head>
@@ -265,7 +272,7 @@
             $.ajax({
                 
                 type: "GET",
-                url: "http://localhost:8082/api/list_users",
+                url: "http://localhost:8081/api/list_users",
                 dataType: "json",
                 beforeSend: function () { // Before we send the request, remove the .hidden class from the spinner and default to inline-block.
                     $('#loader').removeClass('hidden');
@@ -274,7 +281,7 @@
                     var tabletext = "<thead><tr><th>STT</th><th>Họ tên</th><th>Tên DN</th><th>Mật khẩu</th><th>Quyền</th><th>Cập nhật gần đây</th><th>Khóa</th><th>Tác vụ</th></tr></thead><tbody>";
                     var i = 1;
                     $.each(data, function (key, item) {
-                        tabletext += "<tr><td>" + i + "</td><td>" + item.Fullname + "</td><td>" + item.UserName + "</td><td>" + item.Password + "</td><td>" + item.Role.RoleName + "</td><td>" + item.LastUpdate + "</td><td>" + item.LOCKED + '</td><td><button class="btn btn-info" data-toggle="modal" data-target="#model-edit-user" onclick="edituser(`' + item.Fullname + '`,`' + item.UserName + '`,`' + item.Password + '`,`' + item.Role.RoleId + '`,`' + item.Role.RoleName + '`,`' + item.Created + '`,`' + item.LOCKED + '`,`' + item.ID + '`)" style="padding: 0;"> <i class="fas fa-edit icon_action" title="Sửa thông tin" ></i></button><button class="btn btn-info" onclick="delete_user(`' + item.ID + '`)" style="padding: 0;"><i class="fas fa-trash-alt icon_action" title="Xoá thông tin"></i></button></td></tr>';
+                        tabletext += "<tr><td>" + i + "</td><td>" + item.Fullname + "</td><td>" + item.UserName + "</td><td>" + item.Password + "</td><td>" + item.Role.RoleName + "</td><td>" + item.LastUpdate + "</td><td>" + item.LOCKED + '</td><td><button class="btn btn-info btn_SuaUser" data-toggle="modal" data-target="#model-edit-user" onclick="edituser(`' + item.Fullname + '`,`' + item.UserName + '`,`' + item.Password + '`,`' + item.Role.RoleId + '`,`' + item.Role.RoleName + '`,`' + item.Created + '`,`' + item.LOCKED + '`,`' + item.ID + '`)" style="padding: 0;"> <i class="fas fa-edit icon_action" title="Sửa thông tin" ></i></button><button class="btn btn-info btn_XoaUser" onclick="delete_user(`' + item.ID + '`)" style="padding: 0;"><i class="fas fa-trash-alt icon_action" title="Xoá thông tin"></i></button></td></tr>';
                         i = i + 1;
                     });
                     tabletext += "</tbody>";
@@ -363,7 +370,7 @@
                     };
                     $.ajax({
                         type: "POST",
-                        url: "http://localhost:8082/api/insert_user",
+                        url: "http://localhost:8081/api/insert_user",
                         dataType: "json",
                         data: JSON.stringify(user),
                         contentType: "application/json",
@@ -434,13 +441,15 @@
             let text = "Bạn có chắc muốn xóa người dùng này?";
             if (confirm(text) == true) {
                 $.ajax({
-                    url: "http://localhost:8082/api/delete_user/" + user_id,
+                    url: "http://localhost:8081/api/delete_user/?id=" + user_id,
                     type: "DELETE",
 
                 }).done(function (res) {
                     loadDataListUsers();
+                    toastSuccess("Thành công", "Xóa người dùng thành công.");
 
                 }).fail(function (res) {
+                    debugger;
                     toastError("Lỗi", "Xóa người dùng không thành công");
                 })
             } else {
@@ -506,7 +515,7 @@
 
             $.ajax({
                 type: "PUT",
-                url: "http://localhost:8082/api/update_user",
+                url: "http://localhost:8081/api/update_user",
                 dataType: "json",
                 data: JSON.stringify(user),
                 contentType: "application/json",
